--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "dragon-code/benchmark": "^2.6",
         "ergebnis/composer-normalize": "^2.44.0",
         "friendsofphp/php-cs-fixer": "^3.64.0",
+        "php-defer/php-defer": "^5.0",
         "phpstan/phpstan": "^1.12.6",
         "phpunit/phpunit": "^10.5.36",
         "phpyh/coding-standard": "^2.6.2",
