--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -76,7 +76,7 @@ jobs:
         with:
           composer-options: --optimize-autoloader
           dependency-versions: ${{ matrix.dependency-versions }}
-      - run: composer test -- --colors=always --coverage-clover coverage.xml
+      - run: composer test -- --colors=always ${{ matrix.php == '8.1' && matrix.dependency-versions == 'locked' && '--coverage-clover=coverage.xml' || '' }}
       - if: ${{ matrix.php == '8.1' && matrix.dependency-versions == 'locked' }}
         uses: codecov/codecov-action@v4
         env:
